Preventing entries to wrap in new lines

--- a/styles/daily.sass
+++ b/styles/daily.sass
@@ -60,7 +60,7 @@ body
   -webkit-text-stroke: 0.25px
 
 article 
-  width: 868px
+  width: 880px
   font-size: 16px
   padding: 0 2em
   margin: 2em 0
@@ -124,6 +124,7 @@ p
     margin: 0.4em 0
     margin-left: 1.2em
     list-style: circle outside
+    white-space: nowrap
     & > img:not([title="don’t miss"])
       position: absolute
       left: -2.7em
